--- a/views/menu.pug
+++ b/views/menu.pug
@@ -5,7 +5,7 @@ if (menu === 'profile' || menu === 'home')
 			a(href="#", title="Menu")
 				img(src="https://pu.bli.sh/images/menu_button.svg")
 
-			div#dropdown
+			div#dropdown.row
 				a.drop.tb-11-m0#contact(href="/") 
 					span.ms-font-l Home
 				if (loggedin)
