--- a/views/vue/map.pug
+++ b/views/vue/map.pug
@@ -49,6 +49,10 @@ script(type="text/javascript").
 				base: 0,
 				baseMaps: [
 					{
+						attribution: 'Map tiles by <a href="https://carto.com/">Carto</a><a href="https://carto.com/attributions"</a>',
+						url: 'https://dnv9my2eseobd.cloudfront.net/v3/cartodb.map-4xtxp73f/{z}/{x}/{y}.png'
+					},
+					{
 						url: 'https://api.mapbox.com/styles/v1/tbushman/ciq7gm0ov008kbfm580v9mm9c/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1IjoidGJ1c2htYW4iLCJhIjoiSmI0aU94OCJ9.SZytljBzoWupPUYeu_OR9A',
 						attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>'
 					},
@@ -256,7 +260,9 @@ script(type="text/javascript").
 							return circleMarker;
 						}
 					}).addTo(self.map);
-					//- self.map.fitBounds(self.dataLayer.getBounds())
+					if (/home/.test(window.location.href) || /api\/publish/.test(window.location.href)) {
+						self.map.fitBounds(self.dataLayer.getBounds())
+					}
 
 				})
 				//- var lMarker;
@@ -350,7 +356,7 @@ script(type="text/javascript").
 
 								var geojsonMarkerOptions, newFillColor = null;
 								if (!fillColor) {
-									newFillColor = self.catColor(feature.properties.cat)
+									newFillColor = self.catColor(feature.properties.cat[0])
 								}
 								geojsonMarkerOptions = {
 										radius: 11,
