catch search errors

--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,7 +1,7 @@
 if (menu === 'profile' || menu === 'home')
-	#menu
-		li
-			input#mySearch.catchphrase(type="search", placeholder="search")
+	#menu.row.tb-6-m0
+		li.tb-2-m0.tb-1-m2
+			//- input#mySearch.catchphrase(type="search", placeholder="search", @change="searchThis")
 			a(href="#", title="Menu")
 				img(src="https://pu.bli.sh/images/menu_button.svg")
 
@@ -19,26 +19,30 @@ if (menu === 'profile' || menu === 'home')
 						span.ms-font-l Login
 					a.drop.tb-11-m0#gallery(href="/register") 
 						span.ms-font-l Register
-		
-	script(type="text/javascript").
-		$(document).on('change', '#mySearch', function(e){
-			e.preventDefault();
-			$('.searchbox').slideUp(100);
-			$('.searchbox').remove();
-			var term = $(e.target).val();
-			console.log(term)
-			$.get('/search/'+term+'').done(function(response){
-				console.log(response)
-				
-				$(e.target).parent().append('<div id="dropdown" class="searchbox"></div>')
-				if (response == 'none') {
-					$('.searchbox').slideDown(200);
-					$('.searchbox').append('<p class="drop ms-Grid-col ms-u-sm12">No results</p>')
-				}
-				for (var i in response) {
-					$('.searchbox').slideDown(200);
-					$('.searchbox').append('<a class="drop ms-Grid-col ms-u-sm12" href="/focus/'+response[i]._id+'/'+6+'/'+response[i].geometry.coordinates[1]+'/'+response[i].geometry.coordinates[0]+'"><span class="ms-font-l">'+response[i].properties.label+'</span></a>')
-				}
-			})
-		})
-		
+	//- 
+	//- script(type="text/javascript").
+	//- 	$(document).on('change', 'input#mySearch', function(e){
+	//- 		e.preventDefault();
+	//- 		if (!$('.searchbox')) {
+	//- 
+	//- 		} else {
+	//- 			$('.searchbox').slideUp(100);
+	//- 			$('.searchbox').remove();
+	//- 		}
+	//- 		var term = $(e.target).val();
+	//- 		console.log(term)
+	//- 		$.get('/search/'+term+'').done(function(response){
+	//- 			console.log(response)
+	//- 
+	//- 			$(e.target).parent().append('<div id="dropdown" class="searchbox"></div>')
+	//- 			if (response == 'none') {
+	//- 				$('.searchbox').slideDown(200);
+	//- 				$('.searchbox').append('<p class="drop ms-Grid-col ms-u-sm12">No results</p>')
+	//- 			}
+	//- 			for (var i in response) {
+	//- 				$('.searchbox').slideDown(200);
+	//- 				$('.searchbox').append('<a class="drop ms-Grid-col ms-u-sm12" href="/focus/'+response[i]._id+'/'+6+'/'+response[i].geometry.coordinates[1]+'/'+response[i].geometry.coordinates[0]+'"><span class="ms-font-l">'+response[i].properties.label+'</span></a>')
+	//- 			}
+	//- 		})
+	//- 	})
+	//- 
