--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -307,20 +307,20 @@ hr {
 
 #menu {
 	position: fixed;
-	top: 10px;
-	right: 10px;
-	left: auto;
+	top: 90px;
+	right: auto;
+	left: 0;
 	bottom: auto;
 	pointer-events: none;
-	width: 150px;
-	background-color:none;
+	/* width: auto; */
+	background-color: none;
 	z-index: 5;
 }
 
 #menu > li {
     padding: 0;
     margin: 0;
-	width: 100%;
+	/* width: 100%; */
     height: 100%;
 	position: relative;
     list-style-type: none;
@@ -331,10 +331,11 @@ hr {
     height: 22px;
     position: relative;
 	pointer-events: auto;
+	width: 100%;
 }
 #menu > li > a > img {	
-	height: 28px;
-	width: auto;
+	height: 40px;
+	width: 100%;
 	margin: 0;
 }
 #menu .button {
@@ -351,6 +352,7 @@ hr {
 	margin: 5px 0;
 	background-color: rgba(255,255,255,.97);
 	z-index: 1;
+	width: 180px;
 }
 
 .drop {
@@ -372,14 +374,29 @@ hr {
 
 	outline: none;
 	border:0px solid #dbdbdb;
-	left: 36px;
+	/* left: 36px;
 	top: 0;
-	bottom: auto;
+	bottom: auto; */
 	position: absolute;
-	background: linear-gradient(to right, rgba(255, 255, 255, 0.2),  #EEF4DE);
-	background-color: none;
+	/* background: linear-gradient(to right, rgba(255, 255, 255, 0.2),  #EEF4DE);
+	background-color: none; */
 	pointer-events: auto;
-	padding: 3px;
+	padding: 13px;
+	width: 100%;
+	position: relative;
+	
+}
+
+#mySearch:focus {
+	width: 180px;
+	font-size: 16px;
+}
+
+#dropdown.searchbox {
+	width: 180px;
+	top: 0;
+	max-height: 40vh;
+	overflow-y: auto;
 }
 
 #avatar, #resume, #media, #media1 {
@@ -394,7 +411,7 @@ hr {
 	right: 10px;
 	top: auto;
 	left: auto;
-	width: 110px;
+	width: 80px;
 }
 
 #publish_logo > img {
