--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html
 		link(rel="stylesheet" href="/scripts/pickadate/default.css")
 		link(rel="stylesheet" href="/scripts/pickadate/default.date.css")
 		link(rel="stylesheet" href="/scripts/pickadate/default.time.css")
-		link(rel="stylesheet", href="/stylesheets/styles.css")
+		link(rel="stylesheet", href="/stylesheets/styles.css?v=1.0")
 		script(type="text/javascript", src="/scripts/jquery.min.js")
 		//- script(type="text/javascript", src="/scripts/jquery-ui.min.js")
 		script(type="text/javascript", src="/scripts/leaflet.js")
