add and edit feature fixes

--- a/views/includes/edit.pug
+++ b/views/includes/edit.pug
@@ -1,6 +1,6 @@
 if (infowindow === 'new')
 	
-	div.tb-11-m0#sidepanel(v-if="doc && doc !== ''")
+	div.tb-11-m0#sidepanel
 		a#closepanel(@click="resetView")
 			i.ms-Icon.ms-Icon--x
 
