--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -46,10 +46,12 @@ p, #mainpanel > a.tb-11-m0 {
 	padding-bottom: 10px;
 }
 
-*[class^='tb-1'], *[class^='tb-0'] {
+*[class^='tb-1'], *[class^='tb-0'], *[class^='tb-2'], *[class^='tb-3'], *[class^='tb-4'], *[class^='tb-5'], *[class^='tb-6'], *[class^='tb-7'], *[class^='tb-8'], 
+*[class^='tb-9'], *[class^='tb-10'] {
 	padding-right: 10px;
-	display: inline-block;
-	margin: 0 auto;
+  display: block;
+	/* display: inline-block; */
+	/* margin: 0 auto; */
 	width: auto;
 	height: auto;
 	-webkit-box-sizing: border-box;
@@ -325,13 +327,14 @@ hr {
 	position: relative;
     list-style-type: none;
 	pointer-events: none;
+  display: inline;
 }
 #menu > li > a {	
 	display:inline-block;
     height: 22px;
     position: relative;
 	pointer-events: auto;
-	width: 100%;
+	/* width: 100%; */
 }
 #menu > li > a > img {	
 	height: 40px;
@@ -395,7 +398,7 @@ hr {
 #dropdown.searchbox {
 	width: 180px;
 	top: 0;
-	max-height: 40vh;
+	max-height: 30vh;
 	overflow-y: auto;
 }
 
@@ -589,11 +592,15 @@ a.username:hover > .ms-font-l {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	right: auto;
+	right: 180px;
 	top: auto;
 }
 .buttonbox .ms-Grid-col {
 	margin: 0 0 0 0;
+}
+.btn {
+  width: 42px;
+  vertical-align: top;
 }
 #select, #geolocate {
 	height: auto;
@@ -645,6 +652,13 @@ a.username:hover > .ms-font-l {
 .selectKey {
 	float: right;
 }
+
+@media (orientation: landscape) {
+  .buttonbox > .row > div {
+    display: inline-block;
+  }
+}
+
 @media (min-width: 640px) and (orientation: landscape) {
 .tb-10-m1 {
 	width: 100%;
