--- a/views/includes/gallery.pug
+++ b/views/includes/gallery.pug
@@ -1,7 +1,7 @@
 - var size = 'small'
 - var append = 'tb-11-m0'
 - var sidepanel = 'tb-11-m0'
-
+//- if (/editcontent/.test(window.location.href) || /addfeature/.test(window.location.href))
 div.ms-Grid#mainpanel(v-if="doc && doc !== '' && infowindow && infowindow === 'edit' || infowindow === 'new'")
 	//- div.row.ms-Panel-contentInner
 	include edit.pug
