--- a/views/includes/doc.pug
+++ b/views/includes/doc.pug
@@ -1,5 +1,5 @@
 div.row#sidepanel(class= sidepanel)
-	div.tb-11-m0
+	div.tb-9-m0
 		p.ms-font-xl(v-text="doc.properties.label")
 		p.ms-font-l(v-if="doc.properties.description !== ''", v-text="doc.properties.description")
 		a(v-if="doc.properties.website.split('/')[0] === 'http:' || doc.properties.website.split('/')[0] === 'https:'", :href="doc.properties.website", target="_blank")
@@ -8,6 +8,17 @@ div.row#sidepanel(class= sidepanel)
 			i.ms-Icon.ms-Icon--link
 		div#append(v-if="doc.properties.image !== ''", class= append)
 			img#if_missing(:src= "doc.properties.image")
+	div.tb-1-m0
+		if (loggedin)
+			a#editbutton(v-if="doc && doc !== ''", :href="'/api/editcontent/'+doc._id")
+				i.ms-Icon.ms-Icon--editBox
+			a#closepanel(@click="resetView")
+				i.ms-Icon.ms-Icon--x
+					
+		else
+			a#closepanel(@click="resetView")
+				i.ms-Icon.ms-Icon--x
+
 	div.tb-11-m0
 		p.ms-font-s.ms-fontWeight-semibold(v-text="doc.properties.city")
 			br
@@ -124,17 +135,8 @@ div.row#sidepanel(class= sidepanel)
 			div.row
 				span.ms-font-s Transportation Assistance
 	
-	div.tb-11-m0
+	div.tb-11-m0(v-if="doc.properties.sw && doc.properties.sw.length > 0")
 		div.row
-			p.ms-font-l Shelter Watch
-			div.tb-10-m0#graph(v-if="doc.properties.sw && doc.properties.sw.length > 0")
+			p.ms-font-l Available beds
+			div.tb-10-m0#graph
 
-if (loggedin)
-	a#editbutton(v-if="doc && doc !== ''", :href="'/api/editcontent/'+doc._id")
-		i.ms-Icon.ms-Icon--editBox
-	a#closepanel(@click="resetView")
-		i.ms-Icon.ms-Icon--x
-			
-else
-	a#closepanel(@click="resetView")
-		i.ms-Icon.ms-Icon--x
