--- a/views/includes/gallery.pug
+++ b/views/includes/gallery.pug
@@ -2,13 +2,13 @@
 - var append = 'tb-11-m0'
 - var sidepanel = 'tb-11-m0'
 //- if (/editcontent/.test(window.location.href) || /addfeature/.test(window.location.href))
-div.ms-Grid#mainpanel(v-if="doc && doc !== '' && infowindow && infowindow === 'edit' || infowindow === 'new'")
+div.ms-Grid#mainpanel(:style="{width: pWidth + 'px', height: pHeight + 'px'}", v-if="doc && doc !== '' && infowindow && infowindow === 'edit' || infowindow === 'new'")
 	//- div.row.ms-Panel-contentInner
 	include edit.pug
-div.ms-Grid#mainpanel(v-else-if="doc && doc !== ''")
+div.ms-Grid#mainpanel(:style="{width: pWidth + 'px', height: pHeight + 'px'}", v-else-if="doc && doc !== ''")
 	//- div.row.ms-Panel-contentInner
 	include doc.pug
-div.ms-Grid#mainpanel(v-else-if="geo.length > 0")
+div.ms-Grid#mainpanel(:style="{width: pWidth + 'px', height: pHeight + 'px'}", v-else-if="geo.length > 0")
 	//- div.row.ms-Panel-contentInner
 	include list.pug
 //- if (infowindow)
