--- a/views/includes/doc.pug
+++ b/views/includes/doc.pug
@@ -1,24 +1,27 @@
-div.row#sidepanel(class= sidepanel)
-	div.tb-9-m0
-		p.ms-font-xl(v-text="doc.properties.label")
-		p.ms-font-l(v-if="doc.properties.description !== ''", v-text="doc.properties.description")
-		a(v-if="doc.properties.website.split('/')[0] === 'http:' || doc.properties.website.split('/')[0] === 'https:'", :href="doc.properties.website", target="_blank")
-			i.ms-Icon.ms-Icon--link
-		a(v-else, :href="'http://'+doc.properties.website", target="_blank")
-			i.ms-Icon.ms-Icon--link
-		div#append(v-if="doc.properties.image !== ''", class= append)
-			img#if_missing(:src= "doc.properties.image")
-	div.tb-1-m0
-		if (loggedin)
-			a#editbutton(v-if="doc && doc !== ''", :href="'/api/editcontent/'+doc._id")
-				i.ms-Icon.ms-Icon--editBox
-			a#closepanel(@click="resetView")
-				i.ms-Icon.ms-Icon--x
-					
-		else
-			a#closepanel(@click="resetView")
-				i.ms-Icon.ms-Icon--x
+div.tb-11-m0.stickytop(style="display:inline-block;")
+	div.row
+		div.tb-9-m0(style="display: inline-block;")
+			p.ms-font-xl(v-text="doc.properties.label")
+			p.ms-font-l(v-if="doc.properties.description !== ''", v-text="doc.properties.description")
+			a(v-if="doc.properties.website.split('/')[0] === 'http:' || doc.properties.website.split('/')[0] === 'https:'", :href="doc.properties.website", target="_blank")
+				i.ms-Icon.ms-Icon--link
+			a(v-else, :href="'http://'+doc.properties.website", target="_blank")
+				i.ms-Icon.ms-Icon--link
+			div#append(v-if="doc.properties.image !== ''", class= append)
+				img#if_missing(:src= "doc.properties.image")
+		div.tb-1-m0(style="display: inline-block;")
+			if (loggedin)
+				a#editbutton(v-if="doc && doc !== ''", :href="'/api/editcontent/'+doc._id")
+					i.ms-Icon.ms-Icon--editBox
+				a#closepanel(@click="resetView")
+					i.ms-Icon.ms-Icon--x
+						
+			else
+				a#closepanel(@click="resetView")
+					i.ms-Icon.ms-Icon--x
 
+div.row#sidepanel(class= sidepanel)
+	
 	div.tb-11-m0
 		p.ms-font-s.ms-fontWeight-semibold(v-text="doc.properties.city")
 			br
