--- a/views/includes/list.pug
+++ b/views/includes/list.pug
@@ -1,7 +1,7 @@
 a#closepanel(@click="resetView")
 	i.ms-Icon.ms-Icon--x
 
-p.ms-font-s.listheader.ms-fontWeight-semibold(v-text="geo.length +' features nearby:'", :style="{right: pWidth + 60 + 'px'}")
+p.ms-font-s.listheader.ms-fontWeight-semibold(v-text="geo.length +' features nearby:'", :style="{left: (res ? 0 : pWidth + 42 + 'px')}")
 p &nbsp
 a.tb-11-m0(v-for="(doc, i) in geo" :href="'/focus/'+doc._id+'/14/'+doc.geometry.coordinates[1]+'/'+doc.geometry.coordinates[0]")
 	span.ms-font-l(v-text="doc.properties.label")
