--- a/views/vue/map.pug
+++ b/views/vue/map.pug
@@ -98,7 +98,7 @@ script(type="text/javascript").
 				}
 				$('#input-su_b, #input-su_e, #input-mo_b, #input-mo_e, #input-tu_b, #input-tu_e, #input-we_b, #input-we_e, #input-th_b, #input-th_e, #input-fr_b, #input-fr_e, #input-sa_b, #input-sa_e').pickatime({
 					format: 'h:i A',
-					formatSubmit: 'h:i A',
+					formatSubmit: 'HH:i',
 					hiddenName: true,
 					onOpen: function() {
 						$('head').append('<link rel="stylesheet" href="/scripts/pickadate/default.css"/>')
