--- a/views/menu.pug
+++ b/views/menu.pug
@@ -6,6 +6,8 @@ if (menu === 'profile' || menu === 'home')
 				img(src="https://pu.bli.sh/images/menu_button.svg")
 
 			div#dropdown.row
+				a.drop.tb-11-m0#shelterwatch(href="/shelterwatch")
+					spab.ms-font-l Shelter Watch
 				a.drop.tb-11-m0#contact(href="/") 
 					span.ms-font-l Home
 				if (loggedin)
