--- a/views/vue/map.pug
+++ b/views/vue/map.pug
@@ -18,6 +18,7 @@ script(type="text/javascript").
 		el: '#vue',
 		data: function data(){
 			return {
+				swactive: (this.parseBool(!{JSON.stringify(swactive)})),
 				res: this.isResponsive(),
 				infowindow: this.parseObj(!{JSON.stringify(infowindow)}),
 				res: this.isResponsive(),//(window.innerWidth < 600),
@@ -365,6 +366,14 @@ script(type="text/javascript").
 				//- 
 				if (self.doc && self.doc.properties.sw && self.doc.properties.sw.length > 0) {
 					self.generateGraph(self.doc.properties.sw);
+				} else if (self.swactive) {
+					var housingdata = self.data.filter(function(d){return d.properties.cat.indexOf('H') !== -1});
+					var housingdoc = housingdata[0];
+					if (!housingdoc) {
+						return
+					} else {
+						self.generateGraph(housingdoc.properties.sw);
+					}
 				}
 				$(document).on('click', '#select', function(){
 					var cat = $(this).attr('name');
