--- a/views/vue/map.pug
+++ b/views/vue/map.pug
@@ -19,6 +19,7 @@ script(type="text/javascript").
 		data: function data(){
 			return {
 				swactive: (this.parseBool(!{JSON.stringify(swactive)})),
+				sw: null,
 				res: this.isResponsive(),
 				infowindow: this.parseObj(!{JSON.stringify(infowindow)}),
 				res: this.isResponsive(),//(window.innerWidth < 600),
@@ -365,14 +366,18 @@ script(type="text/javascript").
 				//- }
 				//- 
 				if (self.doc && self.doc.properties.sw && self.doc.properties.sw.length > 0) {
+					self.sw = self.doc.properties.sw;
 					self.generateGraph(self.doc.properties.sw);
 				} else if (self.swactive) {
 					var housingdata = self.data.filter(function(d){return d.properties.cat.indexOf('H') !== -1});
 					var housingdoc = housingdata[0];
+					
 					if (!housingdoc) {
 						return
 					} else {
-						self.generateGraph(housingdoc.properties.sw);
+						self.sw = housingdoc.properties.sw;
+						self.sw.sort(function(a, b) { return b.Date - a.Date; });
+						self.generateGraph(self.sw);
 					}
 				}
 				$(document).on('click', '#select', function(){
